<resources>
    <string name="about_app_name_start">Em</string>
    <string name="about_app_name_end">Care</string>
    <string name="about_description">Em Care is a digital solution that initially aims\n to improve health outcomes for mothers &amp; children\n in emergency settings.\nIt will provide decision-support to frontline health workers\n in emergencies, preserving the fidelity of,\n and increasing access to WHO clinical guidelines.</string>
    <string name="title_patient">Registered Patients</string>
    <string name="title_patient_detail">SamplePatient Detail</string>
    <string name="patient">Patient</string>
    <string name="review">Review</string>
    <string name="title_patient_details">Patient Details</string>
    <string name="title_patient_actions">Patient Actions</string>
    <string name="title_patient_profile">Patient Profile</string>
    <string name="title_home">Em Care</string>
    <string name="title_about">About</string>
    <string name="title_select_location">Select Location</string>
    <string name="menu_about">About Fhir Engine</string>
    <string name="menu_load_resource">Load CQL Resources &amp; Patients</string>
    <string name="menu_sync_resources">Sync Resources</string>
    <string name="menu_patient_edit">@string/edit_patient</string>
    <string name="observation_brief_text">%1$s: %2$s\nEffective: %3$s</string>
    <string name="query_hint_patient_search">Search</string>
    <string
        name="cancel_questionnaire_message"
        >Are you sure you want to discard the answers?</string>
    <string name="patient_id">Id</string>
    <string name="patient_name">Name</string>
    <string name="patient_gender">Gender</string>
    <string name="patient_dob">DOB</string>
    <string name="patient_phone_number">Phone Number</string>
    <string name="patient_city">City</string>
    <string name="patient_country">Country</string>
    <string name="patient_is_active">Is Active</string>
    <string name="patient_property_mobile">Mobile Number</string>
    <string name="patient_property_identifier">Unique Identification</string>
    <string name="patient_property_id">ID Number</string>
    <string name="patient_property_postal_code">Postal Code</string>
    <string name="patient_property_address">Address</string>
    <string name="patient_property_dob">Date of Birth</string>
    <string name="patient_property_gender">Gender</string>
    <string name="add_patient">Add Patient</string>
    <string name="edit_patient">Edit Patient</string>
    <string name="submit">Submit</string>
    <string name="message_syncing">Syncing\u2026</string>
    <string name="message_input_missing">Inputs are missing.</string>
    <string name="message_patient_updated">Patient is updated.</string>
    <string name="inputs_missing">Inputs are missing.</string>
    <string name="resources_saved">Resources are saved.</string>
    <string name="response_received">questionnaire response is received.</string>
    <string name="html_text">Current status: <font
        color="#ddd"
        >UNKNOWN</font></string>
    <string name="header_observation">Observations</string>
    <string name="header_conditions">Conditions</string>
    <string name="message_no_datetime">No effective DateTime</string>
    <string name="message_no_value_quantity">No ValueQuantity</string>
    <string name="complete_survey">Complete Survey</string>
    <string name="delete_patient">Delete Patient</string>
    <string name="risk_status">Current status: </string>
    <string name="unknown">UNKNOWN</string>
    <string name="none">none</string>
    <string name="description_status">Status</string>
    <string name="description_arrow">Arrow</string>
    <string name="consultation_icon">Consultation Icon</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sync_menu">Sync</string>
    <string name="last_sync">Last sync</string>
    <string name="login_screen_username_hint">Username</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_application_name">Emcare-WHO</string>
    <string name="login_screen_login_button">Login</string>
    <string name="label_open_gallery">Open Gallery</string>
    <string name="label_open_camera">Open Camera</string>
    <string name="emergency_button">EMERGENCY</string>
    <string name="dob_label">DOB :</string>
    <string name="last_consultation_date_label">Last Consultation Date:</string>
    <string name="consultation_date_label">Consultation Date :</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_undo">Undo</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_settings">Settings</string>
    <string name="button_try_again">Try Again</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_turn_on_internet_connectivity">Turn on internet connectivity</string>
    <string name="button_logout_anyway">Logout anyway</string>
    <string name="questionnaire_render_error">Some error occurred with the questionnaire, please sync &amp; try again!</string>
    <string name="no_internet_title">No Internet Available</string>
    <string name="no_record_found">No Record Found</string>
    <string name="server_error_title">Something want wrong</string>
    <string name="no_internet_message">Make sure that mobile data or Wi-Fi is turn on, then try again</string>
    <string name="rationale_camera">This app needs access to your camera to capture and save images</string>
    <string name="rationale_gallery">This app needs access to your gallery to pick images</string>
    <string name="rationale_location">This app needs access to your location to pick current location</string>
    <string name="rationale_phone_state">This app needs access to phone state</string>
    <string name="alert_error_selecting_image">Error selecting the image, please try again.</string>
    <string name="alert_message_error">Something went wrong please try after sometime.</string>
    <string name="action_ok">OK</string>
    <string name="login_description">Creating a digital client record system for child and new born health conditions in emergencies</string>
    <string name="hint_username">E-mail</string>
    <string name="hint_login_id">Log In ID</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="title_login">LOGIN</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_don_t_have_an_account">Don\'t have an account?</string>
    <string name="label_app_version">APP VERSION:</string>
    <string name="label_signup">New User? Signup</string>
    <string name="label_app_name">EM Care</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_location">Location</string>
    <string name="hint_facility">Facility</string>
    <string name="hint_role">Role</string>
    <string name="button_next">Next</string>
    <string name="button_submit">Submit</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="label_success">Success!</string>
    <string name="label_thank_you_for_registration">Thank you for registration…</string>
    <string name="msg_registration_success">You will be Logged into the system once your registration request is approved by the admin !!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="patient_profile">PATIENT PROFILE</string>
    <string name="new_consultation">NEW CONSULTATION</string>
    <string name="active_consultations">ACTIVE CONSULTATIONS</string>
    <string name="previous_consultations">PREVIOUS CONSULTATIONS</string>
    <string name="patient_list">Patients</string>
    <string name="consultation_list">Consultations</string>
    <string name="reason_for_consultation"><u>REASON FOR CONSULTATION</u></string>
    <string name="healthcare_worker">Health Care Worker</string>
    <string name="facility_name">Facility Name</string>
    <string name="about">About</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_sync">Sync</string>
    <string name="label_more">More</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="label_welcome">Welcome,</string>
    <string name="label_let_s">Let\'s</string>
    <string name="label_get_started">Get Started.</string>
    <string name="label_what_would_you_like_to_do_today">What would you like to do today!</string>
  <string name="blocked_device_message">This device is blocked from using the EmCare application.</string>
  <string name="error_saving_resource">Submit unsuccessful, please try again later!</string>
    <string name="error_valid_data">Please answer all required fields.</string>
    <string name="ok">Ok</string>
    <string name="error_msg_username">Please enter username</string>
    <string name="error_msg_password">Please enter password</string>
    <string name="button_add_patient">Add Patient</string>
    <string name="button_add_new_patient">Add New Patient</string>
    <string name="label_id_with_colon">Id: #---%1$s</string>
    <string name="title_add_patient">Register a new child</string>
    <string name="title_emcare_registration">Add New Patient</string>
    <string name="menu_save">Save</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="msg_delete_on_save_consultation">Saving this questionnaire deletes next stages of consultation, do you want to continue?</string>
    <string name="msg_exit_consultation">Are you sure you want to exit the consultation?</string>
    <string name="msg_continue_consultation">Do you want to continue the consultation?</string>
    <string name="msg_save_draft">Are you sure you want to save the questionnaire as draft?</string>
    <string name="msg_reset_questionnaire">Are you sure you want to reset the Questionnaire?</string>
    <string name="msg_exit_registration">Are you sure you want to exit the registration?</string>
    <string name="msg_delete_patient">Are you sure you want to delete the patient?</string>
    <string name="error_msg_firstname">Please enter first name</string>
    <string name="error_msg_lastname">Please enter last name</string>
    <string name="error_msg_email">Please enter email</string>
    <string name="error_msg_valid_email">Please enter valid email</string>
    <string name="error_msg_location">Please select location</string>
    <string name="error_msg_phone_number">Please enter phone number</string>
    <string name="error_msg_facility">Please select facility</string>
    <string name="error_msg_role">Please select role</string>
    <string name="text_compact">Compact</string>
    <string name="text_comfortable">Comfortable</string>
    <string name="label_close">Close</string>
    <string name="label_save">Save</string>
    <string name="text_enlarged">Enlarged</string>
</resources>