<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_healthcare_worker"
            android:icon="@drawable/home_options_contact_icon"
            android:title="@string/healthcare_worker" />
        <item
            android:id="@+id/action_facility_name"
            android:icon="@drawable/facility_name_icon"
            android:title="@string/facility_name" />
        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_help_48px"
            android:title="@string/about" />
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>