<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/image_view_who_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/who_emblem" />

    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_view_who_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/login_screen_application_name"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"></TextView>

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_style"
        android:gravity="center"
        android:hint="@string/login_screen_username_hint"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_style"
        android:gravity="center"
        android:hint="@string/login_screen_password_hint"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login_screen_login_button" />
</RelativeLayout>