<?xml version="1.0" encoding="utf-8"?>
<com.argusoft.who.emcare.widget.ApiViewStateConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/progressLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layoutDescription="@xml/fragment_signup_scene">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bgImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_shape" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/familyLogoImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_172sdp"
            android:src="@drawable/ic_family" />

        <include
            android:id="@+id/headerLayout"
            layout="@layout/layout_header_transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/status_margin_top" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_top_curved_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headerLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_18sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/signupTextView"
                    style="@style/TextView.SemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sign_up"
                    android:textColor="@color/textColorBlack"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ViewSwitcher
                    android:id="@+id/viewSwitcher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/signupTextView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/firstView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/firstNameTextInputLayout"
                            style="@style/TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/firstNameEditText"
                                style="@style/TextInputEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_first_name" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/lastNameTextInputLayout"
                            style="@style/TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            app:layout_constraintTop_toBottomOf="@+id/firstNameTextInputLayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/lastNameEditText"
                                style="@style/TextInputEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_last_name" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/emailTextInputLayout"
                            style="@style/TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            app:layout_constraintTop_toBottomOf="@+id/lastNameTextInputLayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/emailEditText"
                                style="@style/TextInputEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_email"
                                android:inputType="textEmailAddress" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/locationTextInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            app:endIconMode="dropdown_menu"
                            app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:id="@+id/locationEditText"
                                style="@style/TextInputEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/colorWhite"
                                android:hint="@string/hint_location" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/roleTextInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            app:endIconMode="dropdown_menu"
                            app:layout_constraintTop_toBottomOf="@+id/locationTextInputLayout">

                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:id="@+id/roleEditText"
                                style="@style/TextInputEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/colorWhite"
                                android:hint="@string/hint_role"
                                android:imeOptions="actionDone" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/nextButton"
                            style="@style/Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_36sdp"
                            android:text="@string/button_next"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/roleTextInputLayout" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/passwordTextInputLayout"
                            style="@style/TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/passwordEditText"
                                style="@style/TextInputEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_password"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/confirmPasswordTextInputLayout"
                            style="@style/TextInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            app:layout_constraintTop_toBottomOf="@+id/passwordTextInputLayout">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/confirmPasswordEditText"
                                style="@style/TextInputEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_confirm_password"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/submitButton"
                            style="@style/Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_36sdp"
                            android:text="@string/button_submit"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextInputLayout" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ViewSwitcher>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</com.argusoft.who.emcare.widget.ApiViewStateConstraintLayout>