<?xml version="1.0" encoding="utf-8"?>
<com.argusoft.who.emcare.widget.ApiViewStateConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        android:paddingBottom="@dimen/recyclerview_bottom_padding">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:iconifiedByDefault="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_compact"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/radio_button_1"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/image_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/radio_button_1"
                    app:layout_constraintTop_toBottomOf="@+id/text_1"
                    android:src="@drawable/ic_compact"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin">

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_comfortable"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/radio_button_2"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/image_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/radio_button_2"
                    app:layout_constraintTop_toBottomOf="@+id/text_2"
                    android:src="@drawable/ic_comfortable"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <RadioButton
                    android:id="@+id/radio_button_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_enlarged"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/radio_button_3"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/image_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/radio_button_3"
                    app:layout_constraintTop_toBottomOf="@+id/text_3"
                    android:src="@drawable/ic_enlarged"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/save_button"
            style="@style/Questionnaire.SaveDraftButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_save"
            android:layout_marginHorizontal="@dimen/recyclerview_bottom_padding"
            android:layout_marginVertical="@dimen/recyclerview_bottom_padding"
            app:layout_constraintTop_toBottomOf="@id/mainLayout"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/close_button"
            style="@style/Questionnaire.ResetButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_close"
            android:layout_marginHorizontal="@dimen/recyclerview_bottom_padding"
            android:layout_marginVertical="@dimen/recyclerview_bottom_padding"
            app:layout_constraintStart_toEndOf="@id/save_button"
            app:layout_constraintTop_toBottomOf="@id/mainLayout"
            />



</com.argusoft.who.emcare.widget.ApiViewStateConstraintLayout>